// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`permissionSetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 1`] = `
{
  "action": "delete",
  "subject": {
    "entityRef": EntityRef {
      "data": {
        "id": "productId",
        "organizationId": "organizationId",
      },
      "type": "product",
    },
    "subjectType": "product",
  },
}
`;

exports[`permissionSetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 2`] = `
{
  "action": "create",
  "subject": {
    "entityRef": EntityRef {
      "data": {
        "id": "organizationId",
      },
      "type": "organization",
    },
    "subjectType": "product",
  },
}
`;

exports[`permissionSetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 3`] = `
{
  "action": "update",
  "subject": {
    "entityRef": EntityRef {
      "data": {
        "id": "productId",
        "organizationId": "organizationId",
      },
      "type": "product",
    },
    "subjectType": "product",
  },
}
`;
